--- a/images.html
+++ b/images.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/509c72249f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,13 +46,18 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end">
-                        <div class="d-flex align-items-center">
+                        <div class="d-flex flex-column align-items-center">
                             <div class="headerLinks">
                                 <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
                                     +91-9899166417</a>
                                 <!-- <p class="mb-0"><i class="fas fa-envelope"></i> capankajvarshney@gmail.com</p> -->
                                 <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
                                     +91-9811898225</a>
+                            </div>
+                            <div class="headerLinks-mail">
+                                <a class="mb-0" href="mailto:caneerajvarshney@gmail.com"><i
+                                        class="fas fa-envelope mr-1"></i>
+                                    caneerajvarshney@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -80,15 +86,24 @@
                             <span class="hover-white">Important Links</span>
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">The Institue of Chartered</a>
-                            <a class="dropdown-item" href="#">Income Tax Department India</a>
-                            <a class="dropdown-item" href="#">Tax Information Network</a>
-                            <a class="dropdown-item" href="#">Tax Credit Information</a>
-                            <a class="dropdown-item" href="#">For deposit of e Tax</a>
-                            <a class="dropdown-item" href="#">For PAN Details</a>
-                            <a class="dropdown-item" href="#">Service Tax Department</a>
-                            <a class="dropdown-item" href="#">Ministry of Corporate Affairs</a>
-                            <a class="dropdown-item" href="#">Reserve Bank of India</a>
+                            <a class="dropdown-item" target="_blank" href="http://www.icai.org/">The Institue of
+                                Chartered Accountants of india</a>
+                            <a class="dropdown-item" target="_blank" href="https://www.icsi.edu/home/">The Institue of
+                                Company Secretaries of india</a>
+                            <a class="dropdown-item" target="_blank"
+                                href="https://www.incometaxindia.gov.in/Pages/default.aspx">Income Tax Department
+                                India</a>
+                            <a class="dropdown-item" target="_blank" href="https://www.tin-nsdl.com/">Tax Information
+                                Network</a>
+                            <a class="dropdown-item" target="_blank" href="#">Tax Credit Information</a>
+                            <a class="dropdown-item" target="_blank" href="#">For deposit of e Tax</a>
+                            <a class="dropdown-item" target="_blank" href="#">For PAN Details</a>
+                            <a class="dropdown-item" target="_blank" href="#">Service Tax Department</a>
+                            <a class="dropdown-item" target="_blank"
+                                href="https://www.mca.gov.in/content/mca/global/en/home.html">Ministry of Corporate
+                                Affairs</a>
+                            <a class="dropdown-item" target="_blank" href="https://www.rbi.org.in/">Reserve Bank of
+                                India</a>
                         </div>
                     </li>
                     <li class="nav-item navLI">
@@ -126,34 +141,103 @@
     <div class="container mt-5">
         <div class="d-flex">
             <div class="d-flex flex-column mx-1">
-                <div class="my-1">
+                <div class="my-1 overlayImage-container">
                     <img src="assets/images/img1.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
                 </div>
-                <div class="my-1">
+                <div class="my-1 overlayImage-container">
                     <img src="assets/images/img2.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
                 </div>
-                <div class="my-1">
+                <div class="my-1 overlayImage-container">
                     <img src="assets/images/img3.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
                 </div>
             </div>
             <div class="d-flex flex-column mx-1">
-                <div class="my-1">
-                    <img src="assets/images/img5.jpg" width="100%">
-                </div>
-                <div class="my-1">
-                    <img src="assets/images/img6.jpg" width="100%">
-                </div>
-                <div class="my-1">
-                    <img src="assets/images/img7.jpg" width="100%">
-                </div>
-            </div>
-            <div class="d-flex flex-column mx-1">
-                <div class="my-1">
+                <div class="my-1 overlayImage-container">
                     <img src="assets/images/img4.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
                 </div>
-                <div class="my-1">
+                <div class="my-1 overlayImage-container">
+                    <img src="assets/images/img5.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+                <div class="my-1 overlayImage-container">
+                    <img src="assets/images/img6.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-column mx-1">
+                <div class="my-1 overlayImage-container">
+                    <img src="assets/images/img7.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+                <div class="my-1 overlayImage-container">
                     <img src="assets/images/img8.jpg" width="100%">
+                    <div class="overlayImage" onclick="displayCarousel();">
+                        <i class="fas fa-camera"></i>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="imageCarousel">
+        <div class="imageCarousel-close"><i class="fas fa-times text-light" onclick="closeCarousel()"></i></div>
+        <div class="imageCarousel-box">
+            <div class="imageCarousel-inner">
+
+                <div id="demo" class="carousel" data-ride="carousel" style="position: initial;">
+                    <div class="carousel-inner" style="position: initial;">
+
+                        <div class="carousel-item active">
+                            <img class="imageCarousel-img" src="assets/images/img1.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img2.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img3.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img4.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img5.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img6.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img7.jpg" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="imageCarousel-img" src="assets/images/img8.jpg" />
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+
+                </div>
+
             </div>
         </div>
     </div>
@@ -163,29 +247,41 @@
         <div class="footer_wrapper mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-5">
+                        <div class="footerBox">
+                            <h3 class="footer_heading">About Us</h3>
+                            <p>Neeraj Varshney & Associates has founded its professional practice on the philosophy
+                                of
+                                dedication,
+                                discipline and determination. The vision is to maintain the highest level of
+                                professional ethics combined with client satisfaction through efficient and timely
+                                services.</p>
+                            <div class="footer-social">
+                                <ul>
+                                    <li><a target="_blank" href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    </li>
+                                    <li><a target="_blank" href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    </li>
+                                    <li><a target="_blank" href=""><i class="fa fa-instagram"
+                                                aria-hidden="true"></i></a></li>
+                                    <li><a target="_blank" href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 offset-md-1">
                         <div class="footerBox">
                             <h3 class="footer_heading">Quick Links</h3>
                             <ul class="links">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="team.html">Our Team</a></li>
+                                <li><a href="services.html">Services</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="footerBox">
-                            <h3 class="footer_heading">Useful Links</h3>
-                            <ul class="links">
-                                <li><a href="#">Pan</a></li>
-                                <li><a href="#">Tan</a></li>
-                                <li><a href="#">E-Filing</a></li>
-                                <li><a href="#">Online Payment</a></li>
-                                <li><a href="#">Challans</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
                     <div class="col-md-4">
                         <div class="footerBox">
                             <h3 class="footer_heading">Contact Us</h3>
@@ -199,11 +295,7 @@
                 </div>
             </div>
             <div class="copy mt-4">
-                <p class="m-help" style="text-transform: lowercase !important; text-align: center"><i
-                        style="margin-right: 5px" class="fa fa-envelope-o"></i><a
-                        href="mailto:caneerajvarshney@gmail.com">caneerajvarshney@gmail.com</a>
-                </p>
-                <p>&copy; Neeraj Varshney & Associates</p>
+                <p>2021 &copy; Neeraj Varshney & Associates. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
