--- a/contact.html
+++ b/contact.html
@@ -210,7 +210,7 @@
                 <div class="col-md-6">
                     <div class="map-responsive">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56035.80827162502!2d77.2495312620557!3d28.6226276998058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5060a041cdd%3A0x8b3a52a4503e95f0!2sMuthoot%20Finance%20Ltd.!5e0!3m2!1sen!2sin!4v1626075634098!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14012.60231127671!2d77.342828!3d28.5952592!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x744e9541d11f15e0!2sNeeraj%20Varshney%20%26%20Associates!5e0!3m2!1sen!2sin!4v1627557724434!5m2!1sen!2sin"
                             width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
