--- a/contact.html
+++ b/contact.html
@@ -135,14 +135,14 @@
                 <div class="hm-services-title">
                     <h2>Get <span> in Touch</span></h2>
                 </div>
-                <p>Visit our office or simply send us an email anytime you want. If you have any questions, please feel
-                    free
-                    to contact us.</p>
+                <h5 class="text-center">Visit our office or simply send us an email anytime you want. If you have any
+                    questions, please feel
+                    free to contact us. Fill out the form and we will be in touch as soon as possible.</h5>
             </div>
 
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-12 col-lg-4">
                 <div class="column-inner">
                     <div class="service-content-title">Address</div>
@@ -201,64 +201,115 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
-    <div class="contactBlockContainer mt-4">
-        <div class="contactBlock">
-            <div class="row mt-4">
-                <div class="col-md-6">
-                    <div class="map-responsive">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14012.60231127671!2d77.342828!3d28.5952592!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x744e9541d11f15e0!2sNeeraj%20Varshney%20%26%20Associates!5e0!3m2!1sen!2sin!4v1627557724434!5m2!1sen!2sin"
-                            width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div>
-                <div class="col-md-6 py-4 px-5">
-                    <div class="hm-services-sec">
-                        <div class="hm-services-title">
-                            <h2>Request <span>A Callback</span></h2>
+    <div className="container">
+        <div class="contactBlockContainer mt-4">
+            <div class="contactBlock container">
+                <div class="row mt-4">
+                    <div class="col-md-6 m-0" style="border-right:1px solid #f6f6f6; padding:30px;">
+                        <div class="column-inner">
+                            <div class="service-content-title">Address</div>
+                            <div class="column-inner-content">
+                                <div class="column-service">
+
+                                    <span class="column-icon-holder"><i class="fas fa-map-marker-alt"></i></span>
+
+                                    <div class="column-service-content">
+
+                                        <div class="service-content-text">
+                                            IInd Floor, Above Muthoot Finance
+                                            Opposite Govt Rajkiya Inter College
+                                            Sector-22, Noida-201301, Uttar Pradesh</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column-inner">
+                            <div class="service-content-title">Call Us</div>
+                            <div class="column-inner-content">
+                                <div class="column-service">
+                                    <span class="column-icon-holder"><i class="fas fa-phone-alt"></i></span>
+                                    <div class="column-service-content">
+
+                                        <div class="service-content-text-links">
+                                            <a class="mb-0" href="tel:9899166417">
+                                                +91-9899166417</a><br />
+                                            <a class="mb-0" href="tel:9899166417">
+                                                +91-9811898225</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column-inner">
+                            <div class="service-content-title">Email Us</div>
+                            <div class="column-inner-content">
+                                <div class="column-service">
+                                    <span class="column-icon-holder"><i class="fas fa-envelope"></i></span>
+                                    <div class="column-service-content">
+
+                                        <div class="service-content-text-links"><a class="mb-0"
+                                                href="mailto:caneerajvarshney@gmail.com">
+                                                caneerajvarshney@gmail.com</a></div>
+                                        <div class="service-content-text-links"><a class="mb-0"
+                                                href="mailto:caneerajvarshney@gmail.com">
+                                                capankajvarshney@gmail.com</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-4">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14012.60231127671!2d77.342828!3d28.5952592!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x744e9541d11f15e0!2sNeeraj%20Varshney%20%26%20Associates!5e0!3m2!1sen!2sin!4v1627557724434!5m2!1sen!2sin"
+                                width="100%" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
-                    <p class="mt-1 mb-3">contact us via the form and we’ll get back to you shortly.</p>
-                    <!-- <p class="mt-1 mb-3">Please fill out the form below to drop us an email.</p> -->
-                    <form action="https://formspree.io/f/xayadqyr" method="POST">
-                        <div class="form-group">
-                            <!-- <label for="full-name">Full Name</label> -->
-                            <input type="text" name="name" id="full-name" class="form-control contactForm"
-                                required="true" placeholder="Your Name">
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="usr">
+                    <div class="col-md-6 py-4 px-5">
+                        <span class="form-title">
+                            Request a callback
+                        </span>
+                        <p class="mt-5 mb-3">contact us via the form and we’ll get back to you shortly.</p>
+                        <!-- <p class="mt-1 mb-3">Please fill out the form below to drop us an email.</p> -->
+                        <form action="https://formspree.io/f/xayadqyr" method="POST">
+                            <div class="form-group">
+                                <!-- <label for="full-name">Full Name</label> -->
+                                <input type="text" name="name" id="full-name" class="form-control contactForm"
+                                    required="true" placeholder="Your Name">
+                            </div>
+                            <div class="form-group">
+                                <!-- <label for="usr">
                             Email Address:
 
                         </label> -->
-                            <input type="email" class="form-control contactForm" placeholder="Email Address"
-                                required="true" id="usr" name="_replyto">
-                        </div>
-                        <div class="form-group">
-                            <!-- <label for="message">
+                                <input type="email" class="form-control contactForm" placeholder="Email Address"
+                                    required="true" id="usr" name="_replyto">
+                            </div>
+                            <div class="form-group">
+                                <!-- <label for="message">
                             Your message:
 
                         </label> -->
-                            <textarea name="message" rows="5" cols="40" class="form-control contactForm-textarea"
-                                required="true" placeholder="How can we help you?" id="message"></textarea>
-                        </div>
+                                <textarea name="message" rows="5" cols="40" class="form-control contactForm-textarea"
+                                    required="true" placeholder="How can we help you?" id="message"></textarea>
+                            </div>
 
-                        <!-- your other form fields go here -->
-                        <div>
-                            <button type="submit" class="allButton btn" style="transform:skew(0deg); border-radius: 50px;padding: 0 1.875em;height: 3.25em;
+                            <!-- your other form fields go here -->
+                            <div class="mt-5">
+                                <button type="submit" class="allButton btn" style="transform:skew(0deg); border-radius: 50px;padding: 0 1.875em;height: 3.25em;
                                 ">Send
-                                Request</button>
-                        </div>
+                                    Request</button>
+                            </div>
 
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="social-links-contact">
+    <!-- <div class="social-links-contact">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -278,20 +329,11 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="copyright">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <p>Copyright 2045 All Rights Reserved. By <a target="_blank" rel="nofollow noopener" href="//html.design">HTML.Design</a></p>
-                </div>
-              </div>
-            </div>
-          </div> -->
-    </div>
+    </div> -->
     <!--footer Start-->
     <footer>
 
-        <div class="footer_wrapper">
+        <div class="footer_wrapper mt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5">
