--- a/aboutus.html
+++ b/aboutus.html
@@ -109,10 +109,10 @@
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="services.html"><span class="hover-white">Services</span></a>
                     </li>
-                    <li class="nav-item navLI">
+                    <!-- <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="images.html"><span class="hover-white">Photo
                                 Gallary</span></a>
-                    </li>
+                    </li> -->
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="team.html"><span class="hover-white">Team</span></a>
                     </li>
@@ -187,6 +187,111 @@
         </div>
 
     </div>
+
+    <section class="about-section" id="feature">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 mb-4">
+                    <h2 class="heading">Why Choose Us?</h2>
+                    <div class="text-center">
+                        <hr class="style-line"><span class="icon-heading icon-bg"></span>
+                    </div>
+                </div>
+                <div class="col-sm-12 about-info mt-5">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="flip-container">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <div class="info-box"><span class="circle-icon icon-gurantee icon-align">
+                                                <i class="fas fa-users"></i>
+                                            </span>
+                                            <div class="info-line"></div>
+                                            <h3 class="heading-content">Client Centric Approach</h3>
+                                            <p class="content-about">Client is the key driver of our service offerings.
+                                                Our approach to service offerings is based on a client centric and
+                                                customised approach.
+                                            </p>
+                                            <div class="info-line"></div>
+                                        </div>
+                                    </div>
+                                    <div class="back">
+                                        <div class="info-box info-content">
+                                            <div class="info-line"></div>
+                                            <p class="content-about">Client is the key driver of our service offerings.
+                                                Our approach to service offerings is based on a client centric and
+                                                customised approach.
+                                            </p>
+                                            <div class="info-line"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="flip-container">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <div class="info-box"><span class="circle-icon icon-support icon-align">
+                                                <i class="fas fa-comments"></i>
+                                            </span>
+                                            <div class="info-line"></div>
+                                            <h3 class="heading-content">Open<br />
+                                                Communications</h3>
+                                            <p class="content-about">We believe that open communication is the core
+                                                principle in order to demonstrate trust, build long lasting and valuable
+                                                relationships with clientele.
+                                            </p>
+                                            <div class="info-line"></div>
+                                        </div>
+                                    </div>
+                                    <div class="back">
+                                        <div class="info-box info-content">
+                                            <div class="info-line"></div>
+                                            <p class="content-about">We believe that open communication is the core
+                                                principle in order to demonstrate trust, build long lasting and valuable
+                                                relationships with clientele.
+                                            </p>
+                                            <div class="info-line"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="flip-container">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <div class="info-box"><span class="circle-icon icon-uptime icon-align">
+                                                <i class="fas fa-tasks"></i>
+                                            </span>
+                                            <div class="info-line"></div>
+                                            <h3 class="heading-content">Driving quality in delivery</h3>
+                                            <p class="content-about">Our service offerings are driven by quality and
+                                                reviews at every level. We strive to provide a qualitative and
+                                                value-added delivery to our clientele.
+                                            </p>
+                                            <div class="info-line"></div>
+                                        </div>
+                                    </div>
+                                    <div class="back">
+                                        <div class="info-box info-content">
+                                            <div class="info-line"></div>
+                                            <p class="content-about">Our service offerings are driven by quality and
+                                                reviews at every level. We strive to provide a qualitative and
+                                                value-added delivery to our clientele.
+                                            </p>
+                                            <div class="info-line"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--footer Start-->
     <footer>
 
