--- a/team.html
+++ b/team.html
@@ -110,10 +110,10 @@
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="services.html"><span class="hover-white">Services</span></a>
                     </li>
-                    <li class="nav-item navLI">
+                    <!-- <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="images.html"><span class="hover-white">Photo
                                 Gallary</span></a>
-                    </li>
+                    </li> -->
                     <li class="nav-item navLI">
                         <a class="nav-link linkLight" href="team.html"><span class="nav-white">Team</span></a>
                     </li>
