--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center headerLeft">
                             <div class="brandLogo">
                                 <a href="index.html">
                                     <img src="assets/images/logo.png" alt="logo" />
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 d-flex justify-content-end">
+                    <div class="col-md-6 d-flex headerRight">
                         <div class="d-flex flex-column align-items-center">
                             <div class="headerLinks">
                                 <a class="mb-0" href="tel:9899166417"><i class="fas fa-phone-alt mr-1"></i>
@@ -232,7 +232,7 @@
                                                 </div>
                                             </div>
                                         </div> -->
-                                        <div class="row">
+                                        <div class="row flex-column-reverse flex-md-row">
                                             <div class="col-md-9 d-flex align-items-center">
                                                 <div class="box-body">
 
@@ -326,7 +326,7 @@
                             <div class="text-left">
                                 <div class="height-fill-team">
                                     <article class="icon-box d-flex align-items-center">
-                                        <div class="row">
+                                        <div class="row flex-column-reverse flex-md-row">
                                             <div class="col-md-9 d-flex align-items-center">
                                                 <div class="box-body">
 
@@ -406,7 +406,7 @@
                             <div class="text-left">
                                 <div class="height-fill-team">
                                     <article class="icon-box d-flex align-items-center">
-                                        <div class="row">
+                                        <div class="row flex-column-reverse flex-md-row">
 
                                             <div class="col-md-9 d-flex align-items-center">
                                                 <div class="box-body mt-4">
